完成测量qps功能

--- a/example/callee/CMakeLists.txt
+++ b/example/callee/CMakeLists.txt
@@ -1,6 +1,14 @@
-#set(SRC_LIST userservice.cc ../user.pb.cc)
-set(SRC_LIST friendservice.cc ../friend.pb.cc)
+# 定义用户服务相关源文件
+set(USER_SRC user.cc ../user.pb.cc)
+# 定义好友服务相关源文件
+set(FRIEND_SRC friend.cc ../friend.pb.cc)
 
-add_executable(provider ${SRC_LIST})
+# 生成用户服务的可执行程序
+add_executable(provider_user ${USER_SRC})
+# 链接用户服务依赖库
+target_link_libraries(provider_user krpc protobuf)
 
-target_link_libraries(provider krpc protobuf)
+# 生成好友服务的可执行程序
+add_executable(provider_friend ${FRIEND_SRC})
+# 链接好友服务依赖库
+target_link_libraries(provider_friend krpc protobuf)
